scroll layout shift fix

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding-left: calc(100vw - 100%);
 }
 
 h1 {
